# news-feed-system

./: .gitignore
services/content-processor/: go.mod  main.go
services/content-processor/config/: config.go
services/content-processor/consumer/: news_consumer.go
services/content-processor/fetcher/: web_fetcher.go
services/content-processor/keyword/: aggregator.go
services/content-processor/model/: keyword_index_event.go  news_event.go  parsered_content.go  processed_event.go
services/content-processor/parser/: content_parser.go
services/content-processor/processor/: pipeline.go
services/content-processor/producer/: processed_producer.go
services/content-processor/util/: tokenizer.go
services/news-signal-service/: .env.example
services/news-signal-service/.copier/: .copier-answers.yml
services/news-signal-service/backend/: pyproject.toml
services/news-signal-service/backend/app/: main.py  models.py
services/news-signal-service/backend/app/api/: main.py
services/news-signal-service/backend/app/api/routes/: items.py  login.py  rules.py  users.py
services/news-signal-service/backend/app/consumers/: keyword_consumer.py
services/news-signal-service/backend/app/core/: config.py  db.py  security.py
services/news-signal-service/backend/app/repositories/: keyword_repository.py  news.py  notification.py  notification_channels_repository.py  notification_rules_repository.py  users_repository.py
services/news-signal-service/backend/app/repositories/mysql/: keyword_repository.py  notification_channels_repository.py  notification_rules_repository.py  users_repository.py
services/news-signal-service/backend/app/schedulers/: send_notification_digests.py
services/news-signal-service/backend/app/services/: keyword_service.py
services/news-signal-service/backend/app/services/notification/: email_contents.py  email_sender.py  evaluator.py
(+15 files in other folders)
