[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"

dependencies = [
  # Core FastAPI stack (PINNED)
  "fastapi==0.110.0",
  "starlette==0.36.3",
  "uvicorn==0.29.0",

  # Async / HTTP (PINNED)
  "httpx==0.25.2",
  "anyio==4.3.0",

  # Validation / Config
  "pydantic==2.6.4",
  "pydantic-settings==2.2.1",
  "email-validator==2.1.1",

  # DB (MySQL 기준)
  "sqlalchemy==2.0.29",
  "pymysql==1.1.0",

  # Utils
  "jinja2==3.1.4",
  "tenacity==8.2.3",
]


[tool.uv]
dev-dependencies = [
    "pytest<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "pre-commit<4.0.0,>=3.6.2",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
    "coverage<8.0.0,>=7.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true
